fixed database connection, and now you can login to the dashboard